<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_edittext_back_shape"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/name"
            android:padding="8dp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"

            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_edittext_back_shape"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:padding="8dp" />


        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_edittext_back_shape"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:padding="8dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_edittext_back_shape"
            android:drawableStart="@drawable/ic_call_black_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/phone"
            android:padding="8dp" />


        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_edittext_back_shape"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/address"
            android:padding="8dp" />

        <com.rafakob.drawme.DrawMeButton xmlns:drawme="http://schemas.android.com/apk/res-auto"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:onClick="goMain"
            android:text="@string/register"
            android:textColor="@color/white"
            drawme:dm_backColor="@color/colorPrimary"
            drawme:dm_backColorDisabled="@color/grey"
            drawme:dm_backColorPressed="@color/colorPrimaryDark"
            drawme:dm_radius="10dp" />
    </LinearLayout>


</ScrollView>