<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_back">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
                android:id="@+id/add_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:elevation="8dp"
                fresco:backgroundImage="@color/gray"
                fresco:placeholderImage="@drawable/ic_dummy_user"
                fresco:progressBarAutoRotateInterval="1000"
                fresco:roundAsCircle="true"
                fresco:roundingBorderColor="@android:color/white"
                fresco:roundingBorderWidth="2dp" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_edittext_back_shape"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/name"
                android:padding="8dp" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"

                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_edittext_back_shape"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:padding="8dp" />


            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_edittext_back_shape"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_edittext_back_shape"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/phone"
                android:padding="8dp" />


            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_edittext_back_shape"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/address"
                android:padding="8dp" />

            <com.rafakob.drawme.DrawMeButton xmlns:drawme="http://schemas.android.com/apk/res-auto"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="18sp"
                drawme:dm_backColor="@color/colorPrimary"
                drawme:dm_backColorDisabled="@color/grey"
                drawme:dm_backColorPressed="@color/colorPrimaryDark"
                drawme:dm_radius="10dp" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>