<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_back"
    tools:context=".activities.ResetPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_login_logo" />

            <TextView
                android:layout_marginTop="55dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/pleas_enter_your_email_to_reset"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"

                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_edittext_back_shape"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:padding="8dp" />
            <com.rafakob.drawme.DrawMeButton xmlns:drawme="http://schemas.android.com/apk/res-auto"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="18sp"
                drawme:dm_backColor="@color/colorPrimary"
                drawme:dm_backColorDisabled="@color/grey"
                drawme:dm_backColorPressed="@color/colorPrimaryDark"
                drawme:dm_radius="10dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>